added missing dependencies

--- a/about.html
+++ b/about.html
@@ -583,6 +583,7 @@
           }, 300); // Delay to ensure transition
         }
       </script>
+      <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     </main>
   </body>
 </html>
