--- a/index.html
+++ b/index.html
@@ -680,6 +680,7 @@
           }, 300); // Delay to ensure transition
         }
       </script>
+      <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     </main>
   </body>
 </html>
