--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+      <link
+      rel="stylesheet"
+      href="assets/css/main.css"
+    />
     <title>Document</title>
     <style>
       .team-section {
