--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
-      <link
-      rel="stylesheet"
-      href="assets/css/main.css"
-    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <title>Document</title>
     <style>
       .team-section {
