--- a/index.html
+++ b/index.html
@@ -86,11 +86,10 @@
         <nav class="navbar navbar-expand-lg bg-transparent fixed-top">
           <div class="container">
             <!-- Logo -->
-            <a
-              class="navbar-brand fw-bold ms-3 ms-md-5 fs-2 text-white"
-              href="#"
-              >LOGO</a
-            >
+            <img src="assets/img/final_logo.png" style="height:50px;" />
+            <a class="navbar-brand fw-bold ms-1 ms-md-1 fs-2 text-white d-none d-md-inline" href="#">
+              ECO
+            </a>
 
             <!-- Mobile Toggler -->
             <button
@@ -578,9 +577,9 @@
       <footer class="bg-primary text-white py-4">
         <div class="container">
           <div class="row text-center text-lg-start">
-            <!-- Logo -->
-            <div class="col-12 col-lg-3 mb-4 mb-lg-0">
-              <h2 class="h3 mb-0">LOGO</h2>
+            <div class="col-12 col-lg-3 mb-4 mb-lg-0 d-flex align-items-start">
+              <img src="assets/img/final_logo.png" style="height:50px; margin-right: 10px;" />
+              <h2 class="h3 mb-0 pt-2">ECO</h2>
             </div>
 
             <!-- Information -->
