--- a/index.html
+++ b/index.html
@@ -577,9 +577,9 @@
       <footer class="bg-primary text-white py-4">
         <div class="container">
           <div class="row text-center text-lg-start">
-            <div class="col-12 col-lg-3 mb-4 mb-lg-0 d-flex align-items-start">
-              <img src="assets/img/final_logo.png" style="height:50px; margin-right: 10px;" />
-              <h2 class="h3 mb-0 pt-2">ECO</h2>
+           <div class="col-12 col-lg-3 mb-4 mb-lg-0 d-flex flex-column flex-lg-row align-items-center align-items-lg-start text-center text-lg-start">
+              <img src="assets/img/final_logo.png" style="height:50px;" />
+              <h2 class="h3 mb-0 pt-2 d-none d-md-inline">ECO</h2>
             </div>
 
             <!-- Information -->
