Added Contact page Added Contact page

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
                 class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll fw-semibold gap-lg-3"
               >
                 <li class="nav-item">
-                  <a class="nav-link active text-white" href="#">HOME</a>
+                  <a class="nav-link active text-white" href="index.html">HOME</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white" href="about.html">ABOUT</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">CONTACT</a>
+                  <a class="nav-link text-white" href="contact.html">CONTACT</a>
                 </li>
               </ul>
               <a href="#donation-section" class="d-none d-lg-block ms-lg-3">
@@ -651,7 +651,7 @@
           <div class="row">
             <div class="col-12 text-center">
               <p class="mb-0 p-1">
-                © Keith Arcedes / Christine Joy Sorilla 2025
+                © Keith Arcedes / Cristine Joy Sorilla 2025
               </p>
             </div>
           </div>
