--- a/about.html
+++ b/about.html
@@ -9,10 +9,8 @@
     />
     <link rel="stylesheet" href="assets/css/main.css" />
     <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
   
     <title>Document</title>
     <style>
@@ -71,12 +69,11 @@
         <!-- Navigation Bar -->
         <nav class="navbar navbar-expand-lg bg-transparent fixed-top">
           <div class="container">
-            <!-- Logo -->
-            <a
-              class="navbar-brand fw-bold ms-3 ms-md-5 fs-2 text-white"
-              href="#"
-              >LOGO</a
-            >
+             <!-- Logo -->
+             <img src="assets/img/final_logo.png" style="height:50px;" />
+             <a class="navbar-brand fw-bold ms-1 ms-md-1 fs-2 text-white d-none d-md-inline" href="#">
+               ECO
+             </a>
 
             <!-- Mobile Toggler -->
             <button
@@ -103,7 +100,7 @@
                   <a class="nav-link text-white" href="about.html">ABOUT</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-white" href="#">CONTACT</a>
+                  <a class="nav-link text-white" href="contact.html">CONTACT</a>
                 </li>
               </ul>
               <a href="#donation-section" class="d-none d-lg-block ms-lg-3">
@@ -488,8 +485,9 @@
         <div class="container">
           <div class="row text-center text-lg-start">
             <!-- Logo -->
-            <div class="col-12 col-lg-3 mb-4 mb-lg-0">
-              <h2 class="h3 mb-0">LOGO</h2>
+            <div class="col-12 col-lg-3 mb-4 mb-lg-0 d-flex flex-column flex-lg-row align-items-center align-items-lg-start text-center text-lg-start">
+              <img src="assets/img/final_logo.png" style="height:50px;" />
+              <h2 class="h3 mb-0 pt-2 d-none d-md-inline">ECO</h2>
             </div>
 
             <!-- Information -->
@@ -560,7 +558,7 @@
           <div class="row">
             <div class="col-12 text-center">
               <p class="mb-0 p-1">
-                © Keith Arcedes / Christine Joy Sorilla 2025
+                © Keith Arcedes / Cristine Joy Sorilla 2025
               </p>
             </div>
           </div>
