--- a/about.html
+++ b/about.html
@@ -8,7 +8,6 @@
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <!-- Bootstrap CSS -->
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
   
@@ -69,11 +68,11 @@
         <!-- Navigation Bar -->
         <nav class="navbar navbar-expand-lg bg-transparent fixed-top">
           <div class="container">
-             <!-- Logo -->
-             <img src="assets/img/final_logo.png" style="height:50px;" />
-             <a class="navbar-brand fw-bold ms-1 ms-md-1 fs-2 text-white d-none d-md-inline" href="#">
-               ECO
-             </a>
+            <!-- Logo -->
+            <img src="assets/img/final_logo.png" style="height:50px;" />
+            <a class="navbar-brand fw-bold ms-1 ms-md-1 fs-2 text-white d-none d-md-inline" href="#">
+              ECO
+            </a>
 
             <!-- Mobile Toggler -->
             <button
@@ -92,9 +91,7 @@
                 class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll fw-semibold gap-lg-3"
               >
                 <li class="nav-item">
-                  <a class="nav-link active text-white" href="index.html"
-                    >HOME</a
-                  >
+                  <a class="nav-link active text-white" href="index.html">HOME</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white" href="about.html">ABOUT</a>
@@ -184,15 +181,7 @@
             class="about-section py-5 position-relative overflow-hidden"
             style="padding-top: 80px !important"
           >
-            <!-- Darkened Background Image -->
-            <div
-              class="position-absolute top-0 start-0 w-100 h-100"
-              style="
-                background: url('assets/img/nature-bg.jpg') center/cover
-                  no-repeat;
-                filter: brightness(0.4) contrast(1.2);
-              "
-            ></div>
+            
           </section>
         </div>
 
