--- a/about.html
+++ b/about.html
@@ -63,8 +63,8 @@
     <main>
       <!-- About Us Section -->
       <section
-        class="about-section overflow-hidden d-flex flex-column justify-content-center align-items-center vh-100"
-      >
+      class="hero overflow-hidden d-flex flex-column justify-content-center align-items-center vh-100"
+    >
         <!-- Navigation Bar -->
         <nav class="navbar navbar-expand-lg bg-transparent fixed-top">
           <div class="container">
