fixed bugs fixed bugs

--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@
               <li class="nav-item mb-4">
                 <a
                   class="nav-link text-white"
-                  href="#"
+                  href="contact.html"
                   onclick="closeOffcanvas()"
                   >CONTACT</a
                 >
@@ -181,12 +181,11 @@
         </div>
 
        <!-- Content Container -->
-  <div class="container position-relative z-1 text-white">
+  <div class="container position-relative z-1 text-white pb-5 pb-md-0">
     <div class="row justify-content-center">
       <div class="col-lg-8 text-center">
         <h2 class="fw-bold mb-4 fs-4 fs-md-3 fs-lg-2">About Us</h2>
-
-        <div class="justify-content-center mx-auto p-3 p-md-4 p-lg-5 rounded-3 pb-5 pb-md-0">
+        <div class="justify-content-center mx-auto p-3 p-md-4 p-lg-5 rounded-3 pb-5 pb-md-0  d-flex flex-column justify-content-center align-items-center">
           <p class="mb-4 fs-6 fs-md-5">
             At <span class="fw-bold text-success">Environmental Conservation Organization (ECO)</span>,
             we are dedicated to raising environmental awareness and
