--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               <li class="nav-item mb-4">
                 <a
                   class="nav-link text-white"
-                  href="#"
+                  href="contact.html"
                   onclick="closeOffcanvas()"
                   >CONTACT</a
                 >
