--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
               <li class="nav-item mb-4">
                 <a
                   class="nav-link text-white"
-                  href="#"
+                  href="contact.html"
                   onclick="closeOffcanvas()"
                   >CONTACT</a
                 >
@@ -188,44 +188,46 @@
         </div>
 
        <!-- Content Container -->
-  <div class="container position-relative z-1 text-white mt-5 pt-5">
-    <div class="row justify-content-center">
-      <div class="col-lg-8 text-center">
-        <h2 class="fw-bold mb-0 fs-4 fs-md-3 fs-lg-2">Contact</h2>
-        <div class="justify-content-center mx-auto p-3 p-md-4 p-lg-4 rounded-3">
-          <p class="mb-4 fs-6 fs-md-5">
-           Do you have any questions? Feel free to get in touch with us via our
-           contact form below. We usually reply within 24 hours!
-          </p>
-        </div>
-      </div>
-      <div class="col-lg-8 text-center">
-        <h2 class="fw-bold mb-0 fs-4 fs-md-3 fs-lg-2">Want to visit us?</h2>
-        <div class="justify-content-center mx-auto p-3 p-md-4 p-lg-4 rounded-3">
-            <p class="mb-4 fs-6 fs-md-5">
+       <div class="container position-relative z-1 text-white d-flex flex-column justify-content-center align-items-center min-vh-100">
+        <div class="row justify-content-center">
+          <div class="col-lg-8 text-center">
+            <h2 class="fw-bold mb-0 fs-4 fs-md-3 fs-lg-2">Contact</h2>
+            <div class="justify-content-center mx-auto p-3 p-md-4 p-lg-4 rounded-3">
+              <p class="mb-4 fs-6 fs-md-5">
+                Do you have any questions? Feel free to get in touch with us via our
+                contact form below. We usually reply within 24 hours!
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-8 text-center">
+            <h2 class="fw-bold mb-0 fs-4 fs-md-3 fs-lg-2">Want to visit us?</h2>
+            <div class="justify-content-center mx-auto p-3 p-md-4 p-lg-4 rounded-3">
+              <p class="mb-4 fs-6 fs-md-5">
                 <a href="https://www.google.com/maps/search/?api=1&query=W33G%2BPH9%2C%2087%20Osme%C3%B1a%20Ave%2C%20Victorias%20City%2C%20Negros%20Occidental" 
                    target="_blank" 
                    class="text-decoration-underline text-white">
                   Colegio De Sta. Ana De Victorias, Philippines
                 </a>
               </p>
+            </div>
+          </div>
+          <div class="col-lg-8 text-center pb-5">
+            <h2 class="fw-bold mb-0 fs-4 fs-md-3 fs-lg-2">Want to call us?</h2>
+            <div class="justify-content-center mx-auto p-3 p-md-4 p-lg-4 rounded-3">
+              <p class="mb-4 fs-6 fs-md-5">
+                +63956846541
+              </p>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="col-lg-8 text-center pb-5">
-        <h2 class="fw-bold mb-0 fs-4 fs-md-3 fs-lg-2">Want to call us?</h2>
-        <div class="justify-content-center mx-auto p-3 p-md-4 p-lg-4 rounded-3">
-          <p class="mb-4 fs-6 fs-md-5">
-            +63956846541
-          </p>
-        </div>
-      </div>
-    </div>
+      
       </section>
 
       <!-- Success Story Section -->
       <section style="background-color: #f8f9fa" class="get-in-touch-section">
 
-        <div class="container pb-5 pt-1">
+        <div class="container pb-5 pt-3">
             <div class="col-lg-12 text-center pb-3">
                 <h2 class="fw-bold mb-0 fs-4 fs-md-3 fs-lg-2">Get in touch with us</h2>
             </div>
