added title and logo on the header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     />
     <link rel="stylesheet" href="assets/css/main.css" />
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <title>Document</title>
+    <title>Environmental Conservation Organization</title>
+    <link rel="icon" href="assets/img/final_logo.png" type="image/x-icon" />
     <style>
       .team-section {
         background: white;
@@ -117,7 +118,9 @@
                 class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll fw-semibold gap-lg-3"
               >
                 <li class="nav-item">
-                  <a class="nav-link active text-white" href="index.html">HOME</a>
+                  <a class="nav-link active text-white" href="index.html"
+                    >HOME</a
+                  >
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white" href="about.html">ABOUT</a>
@@ -587,9 +590,10 @@
       <footer class="bg-primary text-white py-4">
         <div class="container">
           <div class="row text-center text-lg-start">
-
-           <div class="col-12 col-lg-3 mb-4 mb-lg-0 d-flex flex-column flex-lg-row align-items-center align-items-lg-start text-center text-lg-start">
-              <img src="assets/img/final_logo.png" style="height:50px;" />
+            <div
+              class="col-12 col-lg-3 mb-4 mb-lg-0 d-flex flex-column flex-lg-row align-items-center align-items-lg-start text-center text-lg-start"
+            >
+              <img src="assets/img/final_logo.png" style="height: 50px" />
               <h2 class="h3 mb-0 pt-2 d-none d-md-inline">ECO</h2>
             </div>
 
@@ -687,7 +691,7 @@
             document
               .getElementById("donation-section")
               .scrollIntoView({ behavior: "smooth" });
-          }, 300); // Delay to ensure transition
+          }, 320); // Delay to ensure transition
         }
       </script>
       <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
