--- a/about.html
+++ b/about.html
@@ -9,9 +9,8 @@
     />
     <link rel="stylesheet" href="assets/css/main.css" />
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-  
-    <title>Document</title>
+    <title>Environmental Conservation Organization</title>
+    <link rel="icon" href="assets/img/final_logo.png" type="image/x-icon" />
     <style>
       .impact-title {
         font-weight: bold;
