--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="node_modules/bootstrap/dist/css/bootstrap.min.css"
+      href="assets/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <!-- Bootstrap CSS -->
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
     <title>Environmental Conservation Organization</title>
     <link rel="icon" href="assets/img/final_logo.png" type="image/x-icon" />
     <style>
@@ -412,7 +411,7 @@
           }, 300); // Delay to ensure transition
         }
       </script>
-      <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="assets/js/bootstrap.bundle.min.js"></script>
     </main>
   </body>
 </html>
