--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                   <a class="nav-link text-white" href="contact.html">CONTACT</a>
                 </li>
               </ul>
-              <a href="#donation-section" class="d-none d-lg-block ms-lg-3">
+              <a href="index.html#donation-section" class="d-none d-lg-block ms-lg-3">
                 <button class="btn btn-pulse bg-primary text-white">
                   Donate
                 </button>
@@ -163,7 +163,7 @@
               <li class="nav-item mb-3">
                 <a
                   class="nav-link active text-white"
-                  href="#"
+                  href="index.html"
                   onclick="closeOffcanvas()"
                   >HOME</a
                 >
