--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
                   <a class="nav-link text-white" href="contact.html">CONTACT</a>
                 </li>
               </ul>
-              <a href="#donation-section" class="d-none d-lg-block ms-lg-3">
+              <a href="index.html#donation-section" class="d-none d-lg-block ms-lg-3">
                 <button class="btn btn-pulse bg-primary text-white">
                   Donate
                 </button>
@@ -118,10 +118,7 @@
           aria-labelledby="mobileMenuLabel"
         >
           <div class="offcanvas-header border-bottom border-secondary">
-            <h5
-              class="offcanvas-title text-white text-center w-100"
-              id="mobileMenuLabel"
-            >
+            <h5 class="offcanvas-title text-white" id="mobileMenuLabel">
               MENU
             </h5>
             <button
@@ -132,9 +129,9 @@
             ></button>
           </div>
           <div
-            class="offcanvas-body d-flex flex-column align-items-center justify-content-start text-center mt-3"
+            class="offcanvas-body py-4 d-flex flex-column align-items-center justify-content-start"
           >
-            <ul class="navbar-nav fw-semibold">
+            <ul class="navbar-nav fw-semibold text-center">
               <li class="nav-item mb-3">
                 <a
                   class="nav-link active text-white"
@@ -161,8 +158,8 @@
               </li>
             </ul>
             <a
-              href="index.html"
-              class="btn btn-primary btn-pulse w-auto py-2 mt-3"
+              href="index.html#donation-section"
+              class="btn btn-primary btn-pulse w-20 py-2"
               onclick="scrollToDonation()"
               >Donate</a
             >
