Revert contact.html updates
Revert contact.html updates

--- a/contact.html
+++ b/contact.html
@@ -102,12 +102,11 @@
                   <a class="nav-link text-white" href="contact.html">CONTACT</a>
                 </li>
               </ul>
-                  <a
-              href="index.html#donation-section"
-              class="btn btn-primary btn-pulse w-20 py-2"
-              onclick="scrollToDonation()"
-              >Donate</a
-            >
+                 <a href="index.html#donation-section" class="d-none d-lg-block ms-lg-3">
+                <button class="btn btn-pulse bg-primary text-white">
+                  Donate
+                </button>
+              </a>
             </div>
           </div>
         </nav>
