--- a/contact.html
+++ b/contact.html
@@ -66,11 +66,8 @@
         <nav class="navbar navbar-expand-lg bg-transparent fixed-top">
           <div class="container">
             <!-- Logo -->
-            <img src="assets/img/final_logo.png" style="height: 50px" />
-            <a
-              class="navbar-brand fw-bold ms-1 ms-md-1 fs-2 text-white d-none d-md-inline"
-              href="#"
-            >
+            <img src="assets/img/final_logo.png" style="height:50px;" />
+            <a class="navbar-brand fw-bold ms-1 ms-md-1 fs-2 text-white d-none d-md-inline" href="#">
               ECO
             </a>
 
@@ -91,9 +88,7 @@
                 class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll fw-semibold gap-lg-3"
               >
                 <li class="nav-item">
-                  <a class="nav-link active text-white" href="index.html"
-                    >HOME</a
-                  >
+                  <a class="nav-link active text-white" href="index.html">HOME</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link text-white" href="about.html">ABOUT</a>
@@ -102,7 +97,7 @@
                   <a class="nav-link text-white" href="contact.html">CONTACT</a>
                 </li>
               </ul>
-                 <a href="index.html#donation-section" class="d-none d-lg-block ms-lg-3">
+              <a href="index.html#donation-section" class="d-none d-lg-block ms-lg-3">
                 <button class="btn btn-pulse bg-primary text-white">
                   Donate
                 </button>
