--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
                 </li>
               </ul>
               <a href="index.html#donation-section" class="d-none d-lg-block ms-lg-3">
-                <button class="btn btn-pulse bg-primary text-white">
+                <button class="btn btn-pulse bg-secondary text-white">
                   Donate
                 </button>
               </a>
@@ -156,7 +156,7 @@
             </ul>
             <a
               href="index.html#donation-section"
-              class="btn btn-primary btn-pulse w-20 py-2"
+              class="btn btn-secondary btn-pulse w-20 py-2"
               onclick="scrollToDonation()"
               >Donate</a
             >
@@ -292,7 +292,7 @@
       </section>
 
       <!-- Mission & Vision Section -->
-      <section class="mission-vision py-5 bg-primary">
+      <section class="mission-vision py-5 bg-secondary">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-lg-10">
@@ -461,7 +461,7 @@
       </style>
 
       <!-- footer -->
-      <footer class="bg-primary text-white py-4">
+      <footer class="bg-secondary text-white py-4">
         <div class="container">
           <div class="row text-center text-lg-start">
             <!-- Logo -->
