--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
                 </li>
               </ul>
               <a href="index.html#donation-section" class="d-none d-lg-block ms-lg-3">
-                <button class="btn btn-pulse bg-primary text-white">
+                <button class="btn btn-pulse bg-secondary text-white">
                   Donate
                 </button>
               </a>
@@ -154,7 +154,7 @@
             </ul>
             <a
               href="index.html#donation-section"
-              class="btn btn-primary btn-pulse w-20 py-2"
+              class="btn btn-secondary btn-pulse w-20 py-2"
               onclick="scrollToDonation()"
               >Donate</a
             >
@@ -282,7 +282,7 @@
                   ></textarea>
                 </div>
                 <div class="d-grid">
-                  <button type="submit" class="btn btn-primary">Submit</button>
+                  <button type="submit" class="btn btn-secondary">Submit</button>
                 </div>
               </div>
             </div>
@@ -297,7 +297,7 @@
       </style>
 
       <!-- footer -->
-      <footer class="bg-primary text-white py-4">
+      <footer class="bg-secondary text-white py-4">
         <div class="container">
           <div class="row text-center text-lg-start">
             <div
