--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </li>
               </ul>
               <a href="index.html#donation-section" class="d-none d-lg-block ms-lg-3">
-                <button class="btn btn-pulse bg-primary text-white">
+                <button class="btn btn-pulse bg-secondary text-white">
                   Donate
                 </button>
               </a>
@@ -187,7 +187,7 @@
             </ul>
             <a
               href="#donation-section"
-              class="btn btn-primary btn-pulse w-20 py-2"
+              class="btn btn-secondary btn-pulse w-20 py-2"
               onclick="scrollToDonation()"
               >Donate</a
             >
@@ -575,7 +575,7 @@
 
                   <!-- Donate Button -->
                   <button
-                    class="btn btn-lg btn-primary text-white mt-3"
+                    class="btn btn-lg btn-secondary text-white mt-3"
                     type="submit"
                   >
                     Donate
@@ -587,7 +587,7 @@
         </div>
       </section>
       <!-- footer -->
-      <footer class="bg-primary text-white py-4">
+      <footer class="bg-secondary text-white py-4">
         <div class="container">
           <div class="row text-center text-lg-start">
             <div
