--- a/about.html
+++ b/about.html
@@ -3,121 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="assets/css/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
     <script src="assets/js/bootstrap.min.js"></script>
     <title>Environmental Conservation Organization</title>
     <link rel="icon" href="assets/img/final_logo.png" type="image/x-icon" />
-
   </head>
   <body>
     <main>
       <!-- About Us Section -->
-      <section
-      class="hero overflow-hidden d-flex flex-column vh-100"
-    >
+      <section class="hero overflow-hidden d-flex flex-column vh-100">
         <!-- Navigation Bar -->
-        <nav class="navbar navbar-expand-lg bg-transparent fixed-top">
-          <div class="container">
-            <!-- Logo -->
-            <img src="assets/img/final_logo.png" style="height:50px;" />
-            <a class="navbar-brand fw-bold ms-1 ms-md-1 fs-2 text-white d-none d-md-inline" href="#">
-              ECO
-            </a>
-
-            <!-- Mobile Toggler -->
-            <button
-              class="navbar-toggler d-lg-none shadow-none border-0 me-3"
-              type="button"
-              data-bs-toggle="offcanvas"
-              data-bs-target="#mobileMenu"
-              aria-controls="mobileMenu"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <!-- Desktop Navigation -->
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul
-                class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll fw-semibold gap-lg-3"
-              >
-                <li class="nav-item">
-                  <a class="nav-link active text-white" href="index.html">HOME</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-white" href="about.html">ABOUT</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-white" href="contact.html">CONTACT</a>
-                </li>
-              </ul>
-              <a href="index.html#donation-section" class="d-none d-lg-block ms-lg-3">
-                <button class="btn btn-pulse bg-secondary text-white">
-                  Donate
-                </button>
-              </a>
-            </div>
-          </div>
-        </nav>
-        <!-- Mobile Offcanvas Menu -->
-        <div
-          class="offcanvas offcanvas-end d-lg-none bg-dark"
-          tabindex="-1"
-          id="mobileMenu"
-          aria-labelledby="mobileMenuLabel"
-        >
-          <div class="offcanvas-header border-bottom border-secondary">
-            <h5 class="offcanvas-title text-white" id="mobileMenuLabel">
-              MENU
-            </h5>
-            <button
-              type="button"
-              class="btn-close btn-close-white"
-              data-bs-dismiss="offcanvas"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div
-            class="offcanvas-body py-4 d-flex flex-column align-items-center justify-content-start"
-          >
-            <ul class="navbar-nav fw-semibold text-center">
-              <li class="nav-item mb-3">
-                <a
-                  class="nav-link active text-white"
-                  href="index.html"
-                  onclick="closeOffcanvas()"
-                  >HOME</a
-                >
-              </li>
-              <li class="nav-item mb-3">
-                <a
-                  class="nav-link text-white"
-                  href="about.html"
-                  onclick="closeOffcanvas()"
-                  >ABOUT</a
-                >
-              </li>
-              <li class="nav-item mb-4">
-                <a
-                  class="nav-link text-white"
-                  href="contact.html"
-                  onclick="closeOffcanvas()"
-                  >CONTACT</a
-                >
-              </li>
-            </ul>
-            <a
-              href="index.html#donation-section"
-              class="btn btn-secondary btn-pulse w-20 py-2"
-              onclick="scrollToDonation()"
-              >Donate</a
-            >
-          </div>
-        </div>
-
+        <div id="navbar-placeholder"></div>
         <!-- Darkened Background Image -->
         <div
           class="position-absolute top-0 start-0 w-100 h-100"
@@ -352,89 +249,7 @@
       </section>
       
       <!-- footer -->
-      <footer class="bg-secondary text-white py-4">
-        <div class="container">
-          <div class="row text-center text-lg-start">
-            <!-- Logo -->
-            <div class="col-12 col-lg-3 mb-4 mb-lg-0 d-flex flex-column flex-lg-row align-items-center align-items-lg-start text-center text-lg-start">
-              <img src="assets/img/final_logo.png" style="height:50px;" />
-              <h2 class="h3 mb-0 pt-2 d-none d-md-inline">ECO</h2>
-            </div>
-
-            <!-- Information -->
-            <div class="col-12 col-lg-3 mb-4 mb-lg-0">
-              <h3 class="h5 mb-3">Information</h3>
-              <ul class="list-unstyled">
-                <li
-                  class="mb-2 d-flex align-items-center justify-content-center justify-content-lg-start"
-                >
-                  <img
-                    src="assets/img/telephone.png"
-                    class="me-2"
-                    width="20"
-                    alt="Phone"
-                  />
-                  +63956846541
-                </li>
-                <li
-                  class="d-flex align-items-center justify-content-center justify-content-lg-start"
-                >
-                  <img
-                    src="assets/img/mail.png"
-                    class="me-2"
-                    width="20"
-                    alt="Email"
-                  />
-                  example@email.com
-                </li>
-              </ul>
-            </div>
-
-            <!-- Our Location -->
-            <div class="col-12 col-lg-3 mb-4 mb-lg-0">
-              <h3 class="h5 mb-3">Our Location</h3>
-              <p
-                class="d-flex align-items-center justify-content-center justify-content-lg-start"
-              >
-                <img
-                  src="assets/img/location.png"
-                  class="me-2"
-                  width="20"
-                  alt="Location"
-                />
-                Victorias City, Philippines
-              </p>
-            </div>
-
-            <!-- Follow Us (Social Icons) -->
-            <div class="col-12 col-lg-3 text-center text-lg-end">
-              <h3 class="h5 mb-3">Follow Us</h3>
-              <div
-                class="d-flex justify-content-center justify-content-lg-end gap-3"
-              >
-                <a href="#" class="text-white">
-                  <img src="assets/img/Icon.png" width="30" alt="Facebook" />
-                </a>
-                <a href="#" class="text-white">
-                  <img src="assets/img/Icon2.png" width="30" alt="Instagram" />
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </footer>
-      <!-- Copyright Section -->
-      <div class="bg-white text-dark py-1">
-        <div class="container">
-          <div class="row">
-            <div class="col-12 text-center">
-              <p class="mb-0 p-1">
-                © Keith Arcedes / Cristine Joy Sorilla 2025
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
+      <div id="footer-placeholder"></div>
 
       <!-- JavaScript for offcanvas-->
       <script src="assets/js/script.js"></script>
