--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,9 @@
         <!-- Logo Section -->
         <div class="col-12 col-lg-3 mb-4 mb-lg-0 d-flex flex-column flex-lg-row align-items-center align-items-lg-start text-center text-lg-start">
           <img src="assets/img/final_logo.png" style="height: 50px" alt="Eco Logo" />
-          <h2 class="h3 mb-0 pt-2 d-none d-md-inline">ECO</h2>
+          <a class="navbar-brand fw-bold ms-1 ms-md-1 fs-2 text-white d-none d-md-inline">
+            ECO
+          </a>
         </div>
   
         <!-- Information Section -->
